<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_color"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sign"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_color"
            android:text="@string/sign"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_percent"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_color"
            android:text="@string/percent"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_slash"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_orange"
            android:text="@string/slash"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_main_color"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_main_color"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_main_color"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_star"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_orange"
            android:text="@string/star"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_main_color"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_main_color"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_main_color"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_orange"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_main_color"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_main_color"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_main_color"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_orange"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button0"
            android:layout_width="185sp"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_main_color"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="34sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_dot"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_main_color"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_orange"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>